# call-center-voice-agent-accelerator

./: .gitignore  CLAUDE.md  README.md  azure.yaml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
docs/: production-readiness.md  troubleshooting.md
hooks/: postdeploy.ps1  predeploy.ps1  preprovision.ps1
infra/: main.bicep  (+1 more)
server/: .env-sample.txt  .env.sample  Dockerfile  README.md  pyproject.toml  run_sms_worker.py  server.py
server/app/: call_loop.py  call_manager.py  config_validator.py  logging_config.py  provider_registry.py
server/app/handler/: acs_event_handler.py  acs_media_handler.py  acs_media_handler_testing.py  ambient_mixer.py  eventgrid_auth.py  genesys_media_handler.py  infobip_event_handler.py  infobip_media_handler.py  transcript_service.py  twilio_event_handler.py  twilio_handler.py  twilio_media_handler.py  voice_live_handler.py  voicelive_media_handler.py
server/app/providers/: __init__.py
server/app/providers/acs/: __init__.py  event_handler.py  media_handler.py
server/app/providers/genesys/: __init__.py  media_handler.py
server/app/providers/infobip/: __init__.py  event_handler.py  media_handler.py
server/app/providers/plivo/: __init__.py  event_handler.py  media_handler.py
server/app/providers/twilio/: __init__.py  event_handler.py  media_handler.py
server/app/queue/: __init__.py  sms_queue.py
server/app/storage/: __init__.py  voicemail_store.py
server/app/worker/: __init__.py  sms_worker.py
server/static/: genesys-simulator.html  index.html  recorder-processor.js
server/static/audio/: README.md
(+17 files in other folders)
